Fix menu header contrast
fixes #3897

--- a/public/css/themes/high-contrast.less
+++ b/public/css/themes/high-contrast.less
@@ -40,6 +40,10 @@
   }
 }
 
+#menu ul:not(.nav-level-2) > .selected > a {
+  color: @text-color;
+}
+
 #menu .active > a {
   text-decoration: underline;
 }
